fixed background and foreground colors to have a sufficient contrast ratio.

--- a/page-style.css
+++ b/page-style.css
@@ -17,3 +17,7 @@ p {
 .tight-width-whitespace {
   /* max-width: 600px; */
 }
+
+.l-bloc {
+  color: #000000;
+}
